# projeto_mestrado

./: .gitignore  README.md
mestrado_ws/src/opencv101/: CMakeLists.txt  package.xml
mestrado_ws/src/opencv101/include/opencv101/: Lane.h
mestrado_ws/src/opencv101/launch/: nmpc.launch
mestrado_ws/src/opencv101/msg/: desvioParams.msg  imageParams.msg  optimizerParams.msg  optimizerResult.msg
mestrado_ws/src/opencv101/src/: Lane.cpp  drawCircle.cpp  getReferences.py  optimizerCaller.cpp  preditor.py
mestrado_ws/src/opencv101/src/modoptimizer/: Makefile  donlp2.c  lauf.c  machine.h  newx.c  o8comm.h  o8fuco.h  o8gene.h  optimizer.c  unitoptimizer.ppu  user_eval.c
mestrado_ws/src/opencv101/src/modoptimizer/data/: tree.ini
mestrado_ws/src/opencv101/src/optimizer/: donlp2.c  o8fuco.h.gch  obj_optimizer  optimizer.c  optimizerteste.c  optimizerteste2.c  optimizerteste3.c  optimizerteste4.c  optimizerteste5.c  optimizerteste6.c  optimizerxyt.c  optimizerxyt2.c  robot1xx.mes  robot1xx.pro  teste  teste.pas  teste2.c  unitoptimizer.pas
